<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_inv_parent_lyt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.constraint.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="7dp" />

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="7dp" />

    <android.support.constraint.Guideline
        android:id="@+id/upper_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="15dp" />

    <android.support.constraint.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="15dp" />

    <android.support.v7.widget.SearchView
        android:id="@+id/search_view"
        app:layout_constraintTop_toBottomOf="@id/upper_guideline"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        android:layout_width="match_parent"
        app:iconifiedByDefault="true"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/invoiceRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="android.support.v7.widget.GridLayoutManager"
        app:spanCount="2"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintBottom_toTopOf="@id/create_inv_tv"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="gone"
        />

    <include
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="gone"
        android:id="@+id/errorLyt"
        layout="@layout/generic_error_retry"
        />


    <TextView
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="10dp"
        android:text="@string/create_invoice"
        android:background="@drawable/rounded_blue_border"
        android:gravity="center"
        android:id="@+id/create_inv_tv"
        />

</android.support.constraint.ConstraintLayout>