<resources>
    <string name="app_name">Invoice Generator</string>
    <string name="generic_error_string">Something Went Wrong</string>
    <string name="zero_invoice">No Invoices Yet, Tap Invoice Icon At the Bottom to generate your invoice.</string>
    <string name="retry">Retry</string>
    <string name="total_prize">TOTAL PRIZE</string>
    <string name="coins">COINS</string>
    <string name="winners">WINNERS</string>
    <string name="playing">PLAYING</string>
    <string name="teams_per_player">TEAMS/PLAYER</string>
    <string name="max_players">MAX PLAYERS</string>
    <string name="rank">RANK</string>
    <string name="team">TEAM</string>
    <string name="points">POINTS</string>
    <string name="mega_contest">MEGA CONTEST</string>
    <string name="pvt_contest">PRIVATE CONTEST</string>
    <string name="points_table">Points Table</string>
    <string name="matches">Matches</string>
    <string name="invoice_table">Invoice Table</string>
    <string name="Dairy_Milk">Dairy Milk</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="invoice_name">Invoice Number %s</string>
    <string name="total_price">Order Total : </string>
    <string name="pls_select">Please Select at least one product.</string>
</resources>
