...
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/point_table_tv"
      app:layout_constraintBottom_toTopOf="@id/fab_bottom_btn"
      />


      <ProgressBar
          android:id="@+id/progress_bar"
          android:layout_width="40dp"
...
