...
        app:layout_constraintTop_toBottomOf="@id/upper_guideline"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plus_iv"
        android:src="@drawable/ic_plus_symbol"
        app:layout_constraintTop_toBottomOf="@id/prod_iv"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        />
...
